# Richness

./: .gitignore  README.md  pyproject.toml  tox.ini
src/richness/: __init__.py  __main__.py
test/: __init__.py  requirements.txt  test_abundance.py  test_incidence.py
