[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "richness"
authors = [{ name = "Lucas A. N. Melo", email = "lucas.melo@columbia.edu" }]
description = "Calculates ecological species richness, inspired by SpadeR"
requires-python = ">=3.10"
dynamic = ["version"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
]
dependencies = ["jax[cpu]", "scipy", "pandas"]

[tool.setuptools.dynamic]
version = { attr = "richness.__version__" }

[project.scripts]
richness = "richness.__main__:main"

[tool.isort]
profile = "black"
line_length = 79
skip_gitignore = true

[tool.black]
line-length = 79
target-version = ["py310"]
skip_magic_trailing_comma = true

[tool.mypy]
ignore_missing_imports = true
strict = true
warn_unreachable = true
enable_error_code = [
    "explicit-override",
    "redundant-expr",
    "truthy-bool",
    "truthy-iterable",
    "ignore-without-code",
    "redundant-self",
]

[tool.pylint.main]
jobs = 0

[tool.pylint.basic]
variable-rgx = "^[a-z][a-zA-Z0-9_]*$"

[tool.pylint.format]
ignore-long-lines = "(?x)(\n\\#\\ type:\\ ignore)"
max-line-length = 79

[tool.pylint."messages control"]
disable = [
    "cyclic-import",
    "duplicate-code",
    "import-error",
    "invalid-name",
    "too-many-ancestors",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-statements",
]
enable = [
    "deprecated-pragma",
    "useless-suppression",
    "use-symbolic-message-instead",
    "bad-inline-option",
]
